# stock_market_price_time_series

./: README.md  agent.py  pyproject.toml
analysis/: utils.py
model/: var_model.pkl
