[tool.poetry]
name = 'stock-market-price-time-series'
version = "0.1.0"
description = ""
authors = ["koueen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.12.0"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
plotly = "*"
ipykernel = "^6.29.4"
mlxtend = "^0.23.1"
jupyterlab = "^4.1.8"
ipywidgets = "^8.1.2"
nbformat = "^5.10.4"
statsmodels = "^0.14.2"
kaleido = "0.2.1"


[tool.poetry.group.style.dependencies]
isort = "^5.12.0"
black = "^23.11.0"